# habit_tracker

./: .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yaml  nginx.conf  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml  deploy.yml
config/: settings.py  urls.py
habits/: models.py  serializers.py  tasks.py  urls.py  views.py
habits/migrations/: 0001_initial.py
habits/tests/: test_models.py  test_tasks.py  test_views.py
