[tool.poetry]
name = "habitat-tracker"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2"
djangorestframework = "^3.16.0"
django-cors-headers = "^4.7.0"
celery = "^5.5.0"
redis = "^5.2.1"
drf-yasg = "^1.21.10"
flake8 = "^7.2.0"
pytest = "^8.3.5"
pytest-django = "^4.11.1"
requests = "^2.32.3"
python-dotenv = "^1.1.0"
eventlet = "^0.39.1"
psycopg2-binary = "^2.9.10"
dj-rest-auth = "^7.0.1"
djangorestframework-simplejwt = "^5.5.0"
coverage = "^7.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
